--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Depends:
 Imports:
     stats,
     utils,
+    ggplot2,
     igraph
 License: GPL-3 | file LICENSE
 URL: https://github.com/Wences91/bibplots
